# cshpy

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
csh/: cshldap.py  member.py  utils.py  webnews.py
