[metadata]
name = cshpy3
author = Steven Mirabito
author-email = smirabito@csh.rit.edu
summary = A collection of Python 3 utilities and wrappers for services run by Computer Science House at RIT
description-file = README.md
license = MIT
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
keywords =
    csh
[files]
packages =
    csh